--- a/tribute.html
+++ b/tribute.html
@@ -13,14 +13,12 @@
     <title>Tribute to Nelson Mandela</title>
 </head>
 <body>
-    <div class="content">
-    <div class="heading">
+    <div class="heading" style="text-align: left">
         <h1>NELSON MANDELA</h1>
     </div>
-    <div class="white">
-        
+    <div class="content">
         <h2>Who is Nelson Mandela?</h2>
-            <p>Nelson Rolihlahla Mandela (1918-2013) was a South African  activist and former president. 
+            <p style="color: #663300">Nelson Rolihlahla Mandela (1918-2013) was a South African  activist and former president. 
             Nelson Mandela helped bring an end to apartheid and has been a global advocate for human rights.
             A member of the African National Congress party beginning in the 1940s, he was a leader of both peaceful
             protests and armed resistance against the white minority’s oppressive regime in a racially divided South Africa.
@@ -29,7 +27,6 @@
             His government focused on dismantling the legacy of apartheid by tackling institutionalised racism and fostering racial reconciliation.
             after retiring from politics in 1999, he remained a devoted champion for peace and social justice in his own nation and around the world until his death in 2013 at the age of 95.
             </p>
-    </div>
     <div class="heading">
         <h2>Top 3 Contributions of Nelson Mandela to Africa</h2>
             <ol>
@@ -81,10 +78,9 @@
                      He and other members of the African National Congress were placed on it because of their militant fight against apartheid.</li>
     </div>
     <div class="container">
-        <img src="photos/91120895.jpg" alt="Mandela Yellow Background" class="image" style="width: 100%">
+        <center><img src="photos/91120895.jpg" alt="Mandela Yellow Background" class="image" style="width: 100%"></center>
         <div class="middle">
-            <div class="text"><a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target=".blank">Read More of Mandela's 
-            History</div>
+            <div class="text"><a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target=".blank">More about Mandela</div>
         </div>
     </div>
     </div>
